# EverMind

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PLAN-REVIEW-LOG.md  PLAN.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  THIRD_PARTY_NOTICES.md  third_party.lock.yaml
.github/workflows/: platform-matrix.yml
agents/claude-code/: CLAUDE.md  mcp-config.json
agents/codex/: AGENTS.md  config-snippet.toml
agents/cursor/: rules.md
agents/devin/: instructions.md  mcp-config.json
config/: evermind.example.yaml
docs/: README.md  README.zh-CN.md  agents.md  architecture.md  components.md  configuration.md  integrations.md  local-to-cloud-roadmap.md  mcp-tools.md  quickstart-macos.md  quickstart-windows.md  security.md  skills.md  troubleshooting.md  user-journey.md  v2-redesign.md  write-policy.md
mcp/: .env.example  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  notes.md  notes.zh-CN.md  pyproject.toml  smithery.yaml  task_plan.md  task_plan.zh-CN.md
mcp/docs/: 01-requirements.md  01-requirements.zh-CN.md  02-architecture.md  02-architecture.zh-CN.md  03-demo-playbook.md  03-demo-playbook.zh-CN.md  04-submission.md  04-submission.zh-CN.md  05-client-integrations.md  05-client-integrations.zh-CN.md  06-benchmark.md  07-release-checklist.md  README.md  auto-memory-prompt.md  auto-memory-prompt.zh-CN.md  local-everos-basic-memory.zh-CN.md
mcp/docs/competition/: benchmark_deep_dive.md  final_submission_30s_checklist.md  notes.md  submission_draft.md  task_plan.md  video_script_main.en.md  video_script_main.zh-CN.md  video_script_short_clip.md
mcp/docs/mcp-config-snippets/: README.md  README.zh-CN.md  claude-code-everos-local.json  cline.json  codex-everos-local.json  from-source.json
mcp/docs/superpowers/plans/: 2026-03-10-fix-forget-parent-id.md  2026-03-12-content-guard-conflicts-registry.md
mcp/examples/competition-demo/: README.md  query_set_real_template.jsonl  run.sh  run_demo.py
mcp/scripts/: build_runtime_bundle.py  build_runtime_manifest.py  check-everos-3378.ps1  check_release_consistency.py  common.py  competition_eval.py  competition_lifecycle_appendix.py  demo_live_walkthrough.py  demo_preload.py  install-everos-nssm-service.ps1  package_runtime_bundle.py  package_source_bundle.py  release_runtime_bundle.py  release_source_bundle.py  smoke_test_client.py  smoke_test_everos_local.py  smoke_test_tools.py  stage_runtime_bundle.py  start-everos-3378.ps1  validate_api.py  validate_api_2.py  verify_runtime_archive.py
mcp/src/evermemos_mcp/: __init__.py  basic_memory_bridge.py  config.py  content_guard.py  evermemos_client.py  everos_client.py  memory_service.py  server.py  space_catalog_service.py
mcp/src/evermind_mcp/: __init__.py  api_client.py  archive_bridge.py  archive_engine.py  bundle_manifest.py  cloud_client.py  codebase_engine.py  config.py  config_v2.py  content_guard.py  embedding.py  everos_client.py  legacy_migration.py  llm.py  memory_service.py  memory_service_v2.py  native_codebase.py  project_catalog.py  project_detector.py  provider_boundary.py  reranker.py  server.py  server_v2.py  space_catalog_service.py  storage.py  tool_bridge.py  tool_errors.py  types_v2.py  vendored_codebase.py
mcp/tests/: test_archive_bridge.py  test_build_runtime_bundle.py  test_build_runtime_manifest.py  test_bundle_manifest.py  test_completion_regressions.py  test_config.py  test_content_guard.py  test_evermemos_client.py  test_evermind_complete.py  test_everos_client.py  test_integration_cloud.py  test_memory_service.py  test_official_bundle_codebase.py  test_package_runtime_bundle.py  test_package_source_bundle.py  test_release_consistency.py  test_release_runtime_bundle.py  test_release_source_bundle.py  test_retrieval_quality.py  test_script_common.py  test_server.py  test_space_catalog_service.py  test_stage_runtime_bundle.py  test_unified_tools.py  test_v2.py  test_v2_production_recall.py  test_verify_runtime_archive.py  validate_scenarios.py
mcp/tests/fixtures/: phase0-baseline.json  retrieval-quality.json
scripts/: build-vendored-codebase.ps1  build-vendored-codebase.sh  release-runtime.ps1  release-runtime.sh  restore-vendored-codebase.ps1  restore-vendored-codebase.sh  setup-macos.sh  setup-windows.ps1
scripts/common/: render-configs.py
scripts/macos/: bootstrap.sh  check-all.sh  check.sh  configure.sh  install-all.sh  install-toolchain.sh  install.sh  setup-user.sh  start-everos.sh  start-mcp.sh
scripts/windows/: bootstrap.ps1  check-all.ps1  check.ps1  configure.ps1  install-all.ps1  install-everos-nssm.ps1  install-toolchain.ps1  install.ps1  setup-user.ps1  start-everos.ps1  start-mcp.ps1
skills/basic-memory/: SKILL.md
tests/: README.md  test_integrated_stack.py
(+24 files in other folders)
