[project]
name = "evermind-mcp"
version = "2.0.0"
description = "EverMind v2 — MCP server for local AI memory. 6-layer persistent recall across sessions with zero config. No cloud, no external service."
readme = "README.md"
license = "MIT"
authors = [
    {name = "EverMind Contributors"}
]
keywords = ["mcp", "memory", "ai", "claude", "cursor", "coding", "local-first", "sqlite"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
vector = ["sqlite-vec>=0.1.6"]
embedding = ["sentence-transformers>=3.0"]
full = ["sqlite-vec>=0.1.6", "sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/YPYT1/EverMind"
Repository = "https://github.com/YPYT1/EverMind"
Issues = "https://github.com/YPYT1/EverMind/issues"

[project.scripts]
evermind-mcp = "evermind_mcp.server_v2:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evermind_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: tests that call real EverMind APIs (disabled by default)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.5",
]
