[project]
name = "evermind-mcp"
version = "2.0.0"
description = "EverMind v2 — MCP server for local AI memory. 6-layer persistent recall with graph, zero config. No cloud, no external service."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "EverMind Contributors"}
]
keywords = ["mcp", "memory", "ai", "claude", "cursor", "coding", "local-first", "sqlite"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "basic-memory",
    "mcp==1.26.0",
    "fastmcp==3.3.1",
    "python-dotenv>=1.0.0",
    "sentence-transformers==5.6.0",
]

[tool.uv.sources]
basic-memory = { path = "../third_party/basic-memory", editable = true }

[project.optional-dependencies]
vector = ["sqlite-vec>=0.1.6"]
embedding = []
chinese = ["jieba>=0.42"]
full = ["sqlite-vec>=0.1.6", "jieba>=0.42"]

[project.urls]
Homepage = "https://github.com/YPYT1/EverMind"
Repository = "https://github.com/YPYT1/EverMind"
Issues = "https://github.com/YPYT1/EverMind/issues"

[project.scripts]
evermind-mcp = "evermind_mcp.server_v2:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evermind_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: tests that call real EverMind APIs (disabled by default)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.5",
]
